feat(data entry): activate data entry's complenteness and validations buttons

--- a/src/app/tabs/apps/data-entry/components/aggregate-form-container/aggregate-form-container.component.html
+++ b/src/app/tabs/apps/data-entry/components/aggregate-form-container/aggregate-form-container.component.html
@@ -48,6 +48,9 @@
     </div>
     <div>
         <app-aggregate-completeness-paginator 
+            (openSectionListAction) = "onOpenSectionListAction($event)"
+            (dataSetCompletenessAction) = "onDataSetCompletenessAction($event)"
+            (validationRuleAction) = "onValidationRuleAction($event)"
             [pager]="pager"
             [isPeriodLocked]="isPeriodLocked"
             [entryFormType]="entryFormType" 
