--- a/src/app/tabs/apps/data-entry/pages/data-entry-form/data-entry-form.page.html
+++ b/src/app/tabs/apps/data-entry/pages/data-entry-form/data-entry-form.page.html
@@ -57,6 +57,8 @@
                     <div>
                         <app-aggregate-form-container
                             (openSectionListAction) = "onOpenSectionListAction($event)"
+                            (dataSetCompletenessAction) = "onDataSetCompletenessAction($event)"
+                            (validationRuleAction) = "onValidationRuleAction($event)"
                             (entryFormStatusChange)="onEntryFormStatusChange($event)" 
                             [colorSettings]="colorSettings$ | async"
                             [currentEntrySelection]="currentEntrySelection" 
