change icon and set configurations for PSS tool

--- a/src/pages/event-capture/components/event-conflict-handler/event-conflict-handler.html
+++ b/src/pages/event-capture/components/event-conflict-handler/event-conflict-handler.html
@@ -24,16 +24,36 @@
 -->
 <span>
   <span *ngIf="isLoading">
-    <loading loadingSize="small"></loading> Discovering events from online server ...
+    <loading loadingSize="small"></loading> Discovering events from DCMS
+    (online) ...
   </span>
   <span *ngIf="!isLoading && eventsWithConflicts.length > 0">
     <span padding-top>
-      {{eventsWithConflicts.length }}&nbsp;<span [translate]="'events with conflicts'"></span>&nbsp;
+      {{eventsWithConflicts.length }}&nbsp;<span
+        [translate]="'local data different from DCMS'"
+      ></span
+      >&nbsp;
     </span>
-    <span class="item-card" color="font-color" ion-button clear text-center text-capitalize (tap)="conflictHandlingAction('accept')">
+    <span
+      class="item-card"
+      color="font-color"
+      ion-button
+      clear
+      text-center
+      text-capitalize
+      (tap)="conflictHandlingAction('accept')"
+    >
       <img class="side-menu-icon" [src]="icons.accept" />
     </span>
-    <span class="item-card" color="font-color" ion-button clear text-center text-capitalize (tap)="conflictHandlingAction('decline')">
+    <span
+      class="item-card"
+      color="font-color"
+      ion-button
+      clear
+      text-center
+      text-capitalize
+      (tap)="conflictHandlingAction('decline')"
+    >
       <img class="side-menu-icon" [src]="icons.decline" />
     </span>
   </span>
